Admin-Panel/headlampIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: traefik-internal
  tls:
    - hosts:
        - headlamp.foerst.haus
      secretName: headlamp-foerst-haus-tls
  rules:
    - host: headlamp.foerst.haus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
